--- a/kubernetes/main/apps/default/kyoo/app/externalsecret.yaml
+++ b/kubernetes/main/apps/default/kyoo/app/externalsecret.yaml
@@ -11,34 +11,24 @@ spec:
       data:
         # App
         KYOO_APIKEYS: "{{ .KYOO_API_KEY}}"
-        THEMOVIEDB_APIKEY: "{{ .TMDB_API_KEY}}"
+        TMDB_API_KEY: "{{ .TMDB_API_KEY}}"
+        TVDB_APIKEY: ""
+        TVDB_PIN: ""
         # Meili
-        MEILI_HOST: http://kyoo-meilisearch:7700
         MEILI_MASTER_KEY: "{{ .MEILI_MASTER_KEY}}"
         # RabbitMQ
-        RABBITMQ_DEFAULT_USER: kyoo
-        RABBITMQ_PORT: "5672"
-        RABBITMQ_HOST: kyoo-rabbitmq
-        RABBITMQ_DEFAULT_PASS: "{{ .RABBITMQ_PASS}}"
-        POSTGRES_DB: &dbName kyoo
-        POSTGRES_SERVER: &dbHost postgres16-rw.databases.svc.cluster.local
-        POSTGRES_PORT: "5432"
+        RABBITMQ_USER: kyoo_all
+        RABBITMQ_PASS: '{{ .RABBITMQ_PASS }}'
+        # Database
         POSTGRES_USER: &dbUser "{{ .KYOO_POSTGRES_USER }}"
         POSTGRES_PASSWORD: &dbpass "{{ .KYOO_POSTGRES_PASS }}"
         # Postgres Init
-        INIT_POSTGRES_DBNAME: *dbName
-        INIT_POSTGRES_HOST: *dbHost
+        INIT_POSTGRES_DBNAME: kyoo_back kyoo_transcoder
+        INIT_POSTGRES_HOST: postgres16-rw.databases.svc.cluster.local
         INIT_POSTGRES_USER: *dbUser
         INIT_POSTGRES_PASS: *dbpass
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
         # OIDC
-        OIDC_AUTHELIA_NAME: Authelia
-        OIDC_AUTHELIA_LOGO: https://www.authelia.com/images/branding/logo-cropped.png
-        OIDC_AUTHELIA_CLIENTID: kyoo
-        OIDC_AUTHELIA_AUTHORIZATION: https://authelia.${SECRET_DOMAIN}/api/oidc/authorization
-        OIDC_AUTHELIA_TOKEN: https://authelia.${SECRET_DOMAIN}/api/oidc/token
-        OIDC_AUTHELIA_PROFILE: https://authelia.${SECRET_DOMAIN}/api/oidc/userinfo
-        OIDC_AUTHELIA_SCOPE: "openid profile groups email"
         OIDC_AUTHELIA_SECRET: "{{ .OIDC_AUTHELIA_SECRET }}"
   data:
     - secretKey: KYOO_API_KEY
