--- a/kubernetes/main/apps/default/kyoo/ks.yaml
+++ b/kubernetes/main/apps/default/kyoo/ks.yaml
@@ -1,19 +1,28 @@
 ---
+# yaml-language-server: $schema=https://kube-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: kyoo
+  name: &appname kyoo
   namespace: flux-system
 spec:
   targetNamespace: default
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   dependsOn:
-    - name: cloudnative-pg-cluster
     - name: external-secrets-stores
+    - name: volsync
   path: ./kubernetes/main/apps/default/kyoo/app
   prune: true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
+  wait: false # no flux ks dependents
   interval: 30m
-  retryInterval: 1m
-  timeout: 3m
+  timeout: 5m
+  postBuild:
+    substitute:
+      APP: *appname
+      VOLSYNC_CAPACITY: 30Gi
+      VOLSYNC_CACHE_CAPACITY: 10Gi
