--- a/kubernetes/main/apps/default/kyoo/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/kyoo/app/helmrelease.yaml
@@ -1,18 +1,18 @@
 ---
-# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2beta2.schema.json
+# yaml-language-server: $schema=https://kube-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: &app kyoo
 spec:
-  interval: 30m
+  interval: 15m
   chart:
     spec:
-      chart: app-template
-      version: 3.6.0
+      chart: kyoo
+      version: 4.7.1
       sourceRef:
         kind: HelmRepository
-        name: bjw-s
+        name: zoriya
         namespace: flux-system
   install:
     createNamespace: true
@@ -23,272 +23,104 @@ spec:
       strategy: rollback
       retries: 3
   values:
-    controllers:
+    global:
       meilisearch:
-        annotations:
-          reloader.stakater.com/auto: "true"
-        containers:
-          app:
-            image:
-              repository: docker.io/getmeili/meilisearch
-              tag: v1.12
-            env:
-              MEILI_ENV: production
-              MEILI_NO_ANALYTICS: true
-              MEILI_DB_PATH: /meili_data/data.ms
-              MEILI_DUMP_DIR: /meili_data/dumps
-              MEILI_MASTER_KEY:
-                valueFrom:
-                  secretKeyRef:
-                    name: kyoo-secret
-                    key: MEILI_MASTER_KEY
-            resources:
-              requests:
-                cpu: 5m
-                memory: 960Mi
-              limits:
-                memory: 1500Mi
-
+        infra:
+          existingSecret: &secret kyoo-secret
+        kyoo_back:
+          masterkeyKey: MEILI_MASTER_KEY
+          existingSecret: *secret
+      postgres:
+        infra:
+          user: kyoo-all
+        kyoo_back:
+          host: &host postgres16-rw.databases.svc.cluster.local
+          kyoo_migrations: &psql
+            userKey: POSTGRES_USER
+            passwordKey: POSTGRES_PASSWORD
+            existingSecret: *secret
+          kyoo_back: *psql
+        kyoo_transcoder:
+          host: *host
+          database: kyoo_transcoder
+          sslmode: require
+          kyoo_transcoder: *psql
       rabbitmq:
-        annotations:
-          reloader.stakater.com/auto: "true"
-        containers:
-          app:
-            image:
-              repository: docker.io/rabbitmq
-              tag: 4-alpine
-            envFrom: &envFrom
-              - secretRef:
-                  name: kyoo-secret
-              - configMapRef:
-                  name: kyoo-config
-            resources:
-              requests:
-                cpu: 5m
-                memory: 261Mi
-              limits:
-                memory: 261Mi
+        infra:
+          passwordKey: RABBITMQ_PASS
+          existingSecret: *secret
+        kyoo_autosync: &rabbit
+          userKey: RABBITMQ_USER
+          passwordKey: RABBITMQ_PASS
+          existingSecret: *secret
+        kyoo_back: *rabbit
+        kyoo_matcher: *rabbit
+        kyoo_scanner: *rabbit
 
-      back:
-        replicas: 1
-        strategy: Recreate
-        annotations:
-          reloader.stakater.com/auto: "true"
-        initContainers:
-          01-init-db:
-            envFrom:
-              - secretRef:
-                  name: kyoo-secret
-            image:
-              repository: ghcr.io/onedr0p/postgres-init
-              tag: 16.6
-          02-migrations:
-            envFrom:
-              - secretRef:
-                  name: kyoo-secret
-            image:
-              repository: ghcr.io/zoriya/kyoo_migrations
-              tag: edge@sha256:e2d7d8f56944a9f2028ce43eb858b52747d23502ca6507afe09bf8ff04ef03de
-        containers:
-          app:
-            image:
-              repository: ghcr.io/zoriya/kyoo_back
-              tag: edge@sha256:2dbf68b47308d651484d69859175d5bc6e08519ad4c2e1b688c3bf351d95fc3b
-            env:
-              TRANSCODER_URL: http://kyoo-transcoder:7666
-            envFrom: &envFrom
-              - secretRef:
-                  name: kyoo-secret
-              - configMapRef:
-                  name: kyoo-config
-            resources:
-              requests:
-                cpu: 10m
-                memory: 512Mi
-              limits:
-                cpu: 2000m
-                memory: 4678Mi
+    kyoo:
+      address: https://kyoo.${SECRET_DOMAIN}
+      libraryIgnorePattern: ".*/([dD]ownloads?|audiobooks|documentaries|e-classes|ebooks|fitness_videos|music)/.*"
+      transcoderAcceleration: vaapi # hardware acceleration profile (valid values: disabled, vaapi, qsv, nvidia)
+      apikey:
+        existingSecret: *secret
+        apikeyKey: KYOO_API_KEY
+      oidc_providers:
+        - name: Authelia
+          existingSecret: *secret
+          clientIdKey: kyoo
+          clientSecretKey: OIDC_AUTHELIA_SECRET
+          logo: https://www.authelia.com/images/branding/logo-cropped.png
+          authorizationAddress: https://authelia.${SECRET_DOMAIN}/api/oidc/authorization
+          tokenAddress: https://authelia.${SECRET_DOMAIN}/api/oidc/token
+          profileAddress: https://authelia.${SECRET_DOMAIN}/api/oidc/userinfo
+          scope: "openid email profile"
+          authMethod: ClientSecretBasic
+    media:
+      volumes:
+        - name: media
+          nfs:
+            server: nas.${SECRET_HOME_DOMAIN}
+            path: /spool/media
+      volumeMounts:
+        - mountPath: &path /media
+          name: media
+          readOnly: true
+      baseMountPath: *path
 
-      front:
-        replicas: 1
-        strategy: RollingUpdate
-        annotations:
-          reloader.stakater.com/auto: "true"
-        containers:
-          app:
-            image:
-              repository: ghcr.io/zoriya/kyoo_front
-              tag: edge@sha256:1a2def4aceba904b351d4464c5e895a34caf356a7daa2560f246efab259bbd31
-            env:
-              KYOO_URL: http://kyoo-back:5000
-            resources:
-              requests:
-                cpu: 5m
-                memory: 100Mi
-              limits:
-                memory: 150Mi
+    contentdatabase:
+      tmdb:
+        apikeyKey: TMDB_API_KEY
+        existingSecret: *secret
+      tvdb:
+        apikeyKey: TVDB_APIKEY
+        pinKey: TVDB_PIN
+        existingSecret: *secret
 
-      scanner:
-        annotations:
-          reloader.stakater.com/auto: "true"
-        containers:
-          app:
-            image:
-              repository: &scannerimage ghcr.io/zoriya/kyoo_scanner
-              tag: &scannertag edge@sha256:bf12b4581163f6ea7115da6201aef4ec8a730d3eebe6a24e7b58bd2d46cae71e
-            args: ["scanner"]
-            envFrom: *envFrom
-            resources:
-              requests:
-                cpu: 5m
-                memory: 100Mi
-              limits:
-                memory: 200Mi
-
-      matcher:
-        replicas: 1
-        strategy: RollingUpdate
-        annotations:
-          reloader.stakater.com/auto: "true"
-        containers:
-          app:
-            image:
-              repository: *scannerimage
-              tag: *scannertag
-            args: ["matcher"]
-            envFrom: *envFrom
-            resources:
-              requests:
-                cpu: 5m
-                memory: 100Mi
-              limits:
-                memory: 100Mi
-
-      autosync:
-        annotations:
-          reloader.stakater.com/auto: "true"
-        containers:
-          app:
-            image:
-              repository: ghcr.io/zoriya/kyoo_autosync
-              tag: 4.7.0@sha256:eca5415548a41181a59251b42c5ad8daa2b7a4f847d8c0f780b25a8da75a102f
-            envFrom: *envFrom
-            resources:
-              requests:
-                cpu: 5m
-                memory: 100Mi
-              limits:
-                memory: 100Mi
-
-      transcoder:
-        annotations:
-          reloader.stakater.com/auto: "true"
-        containers:
-          app:
-            image:
-              repository: ghcr.io/zoriya/kyoo_transcoder
-              tag: edge@sha256:52d7728407e6d403188194bda676e1ba63eef168e19df7ffabf05c30a9e8ed2c
-            envFrom: *envFrom
-            resources:
-              requests:
-                gpu.intel.com/i915: 1
-                cpu: 10m
-                memory: 512Mi
-              limits:
-                gpu.intel.com/i915: 1
-                memory: 4Gi
-
-    defaultPodOptions:
-      securityContext:
-        runAsNonRoot: true
-        runAsUser: 1000
-        runAsGroup: 1000
-        fsGroup: 1000
-        fsGroupChangePolicy: OnRootMismatch
-        supplementalGroups: [44, 105]
-        seccompProfile: { type: RuntimeDefault }
-      nodeSelector:
-        intel.feature.node.kubernetes.io/gpu: "true"
-
-    service:
-      back:
-        controller: back
-        ports:
-          http:
-            port: 5000
-      front:
-        controller: front
-        ports:
-          http:
-            port: 8901
-      rabbitmq:
-        controller: rabbitmq
-        ports:
-          http:
-            port: 5672
-      meilisearch:
-        controller: meilisearch
-        ports:
-          http:
-            port: 7700
-      transcoder:
-        controller: transcoder
-        ports:
-          http:
-            port: 7666
+    back:
+      kyoo_back:
+        resources:
+          requests:
+            cpu: 10m
+            memory: 1Gi
+          limits:
+            cpu: 4000m
+            memory: 8Gi
+      extraInitContainers:
+        - name: init-db
+          image: ghcr.io/onedr0p/postgres-init:16.6
+          envFrom:
+            - secretRef:
+                name: *secret
+      persistence:
+        existingClaim: *app
 
     ingress:
-      main:
-        className: internal
-        annotations:
-          nginx.ingress.kubernetes.io/configuration-snippet: |
-            rewrite /api/(.*) /$1 break;
-        hosts:
-          - host: &host kyoo.${SECRET_DOMAIN}
-            paths:
-              - path: /
-                pathType: Prefix
-                service:
-                  identifier: front
-                  port: http
-              - path: /api
-                pathType: Prefix
-                service:
-                  identifier: back
-                  port: http
-        tls:
-          - hosts:
-              - *host
+      enabled: true
+      ingressClassName: internal
+      host: kyoo.${SECRET_DOMAIN}
+      tls: true
 
-    persistence:
-      search:
-        existingClaim: kyoo-meilisearch
-        advancedMounts:
-          meilisearch:
-            app:
-              - path: /meili_data
-      transcoder-metadata:
-        existingClaim: kyoo-transcoder-metadata
-        advancedMounts:
-          transcoder:
-            app:
-              - path: /metadata
-      cache:
-        type: emptyDir
-        advancedMounts:
-          transcoder:
-            app:
-              - path: /cache
-      backend-metadata:
-        existingClaim: kyoo-backend-metadata
-        advancedMounts:
-          back:
-            app:
-              - path: /metadata
-      media:
-        type: nfs
-        server: nas.${SECRET_HOME_DOMAIN}
-        path: /spool/media/
-        globalMounts:
-          - path: /media
-            readOnly: true
+    meilisearch:
+      enabled: true
+    rabbitmq:
+      enabled: true
