Fix kyoo apikey var

--- a/kubernetes/main/apps/default/kyoo/app/externalsecret.yaml
+++ b/kubernetes/main/apps/default/kyoo/app/externalsecret.yaml
@@ -10,7 +10,7 @@ spec:
       type: Opaque
       data:
         # App
-        KYOO_APIKEYS: "{{ .KYOO_API_KEY}}"
+        KYOO_API_KEY: "{{ .KYOO_API_KEY}}"
         TMDB_API_KEY: "{{ .TMDB_API_KEY}}"
         TVDB_APIKEY: ""
         TVDB_PIN: ""
