Add rabbitmq cookie

--- a/kubernetes/main/apps/default/kyoo/app/externalsecret.yaml
+++ b/kubernetes/main/apps/default/kyoo/app/externalsecret.yaml
@@ -10,7 +10,7 @@ spec:
       type: Opaque
       data:
         # App
-        KYOO_API_KEY: "{{ .KYOO_API_KEY}}"
+        KYOO_APIKEY: "{{ .KYOO_API_KEY}}"
         TMDB_API_KEY: "{{ .TMDB_API_KEY}}"
         TVDB_APIKEY: ""
         TVDB_PIN: ""
@@ -18,6 +18,7 @@ spec:
         MEILI_MASTER_KEY: "{{ .MEILI_MASTER_KEY}}"
         # RabbitMQ
         RABBITMQ_USER: kyoo_all
+        RABBITMQ_COOKIE: '{{ .RABBITMQ_COOKIE }}'
         RABBITMQ_PASS: '{{ .RABBITMQ_PASS }}'
         # Database
         POSTGRES_USER: &dbUser "{{ .KYOO_POSTGRES_USER }}"
@@ -55,6 +56,14 @@ spec:
       remoteRef:
         key: 8b972093-ea0b-4af3-81d0-43b0bb9283f8
         property: rabbitmq_pass
+    - secretKey: RABBITMQ_COOKIE
+      sourceRef:
+        storeRef:
+          name: bitwarden-fields
+          kind: ClusterSecretStore
+      remoteRef:
+        key: 8b972093-ea0b-4af3-81d0-43b0bb9283f8
+        property: rabbitmq_cookie
     - secretKey: KYOO_POSTGRES_USER
       sourceRef:
         storeRef:
