--- a/kubernetes/main/apps/default/kyoo/app/externalsecret.yaml
+++ b/kubernetes/main/apps/default/kyoo/app/externalsecret.yaml
@@ -30,6 +30,7 @@ spec:
         INIT_POSTGRES_PASS: *dbpass
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
         # OIDC
+        OIDC_AUTHENTIK_CLIENTID: kyoo
         OIDC_AUTHELIA_SECRET: "{{ .OIDC_AUTHELIA_SECRET }}"
   data:
     - secretKey: KYOO_API_KEY
