--- a/kubernetes/main/apps/default/kyoo/app/externalsecret.yaml
+++ b/kubernetes/main/apps/default/kyoo/app/externalsecret.yaml
@@ -21,16 +21,10 @@ spec:
         RABBITMQ_COOKIE: '{{ .RABBITMQ_COOKIE }}'
         RABBITMQ_PASS: '{{ .RABBITMQ_PASS }}'
         # Database
-        POSTGRES_USER: &dbUser "{{ .KYOO_POSTGRES_USER }}"
-        POSTGRES_PASSWORD: &dbpass "{{ .KYOO_POSTGRES_PASS }}"
-        # Postgres Init
-        INIT_POSTGRES_DBNAME: kyoo_back kyoo_transcoder
-        INIT_POSTGRES_HOST: postgres16-rw.databases.svc.cluster.local
-        INIT_POSTGRES_USER: *dbUser
-        INIT_POSTGRES_PASS: *dbpass
-        INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
+        POSTGRES_USER: "{{ .KYOO_POSTGRES_USER }}"
+        POSTGRES_PASSWORD: "{{ .KYOO_POSTGRES_PASS }}"
         # OIDC
-        OIDC_AUTHENTIK_CLIENTID: kyoo
+        OIDC_AUTHELIA_CLIENTID: kyoo
         OIDC_AUTHELIA_SECRET: "{{ .OIDC_AUTHELIA_SECRET }}"
   data:
     - secretKey: KYOO_API_KEY
