--- a/kubernetes/main/apps/default/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/main/apps/default/home-assistant/app/helmrelease.yaml
@@ -138,6 +138,10 @@ spec:
         type: emptyDir
         globalMounts:
           - path: /config/tts
+      venv:
+        type: emptyDir
+        globalMounts:
+          - path: /config/.venv
       tmpfs:
         type: emptyDir
         advancedMounts:
