--- a/kubernetes/main/apps/actions-runner-system/gha-runner-scale-set-controller/app/helmrelease.yaml
+++ b/kubernetes/main/apps/actions-runner-system/gha-runner-scale-set-controller/app/helmrelease.yaml
@@ -14,6 +14,8 @@ spec:
         kind: HelmRepository
         name: actions-runner-controller
         namespace: flux-system
+  driftDetection:
+    mode: enabled
   install:
     crds: CreateReplace
     remediation:
@@ -26,3 +28,4 @@ spec:
       retries: 3
   values:
     fullnameOverride: gha-runner-scale-set-controller
+    replicaCount: 1
