--- a/.github/workflows/pre-pull-images.yaml
+++ b/.github/workflows/pre-pull-images.yaml
@@ -4,8 +4,7 @@ name: "Pre-pull Images"
 
 on:
   pull_request:
-    branches:
-      - main
+    branches: ["main"]
     paths:
       - kubernetes/main/apps/**
       - kubernetes/main/flux/**
@@ -23,9 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        branches:
-          - default
-          - pull
+        branches: ["default", "pull"]
       fail-fast: false
     outputs:
       default: ${{ steps.extract-images.outputs.default }}
@@ -33,11 +30,10 @@ jobs:
     steps:
       - name: Generate Token
         uses: actions/create-github-app-token@v1
-        if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
         id: app-token
         with:
-          app-id: ${{ secrets.BOT_APP_ID }}
-          private-key: ${{ secrets.BOT_APP_PRIVATE_KEY }}
+          app-id: "${{ secrets.BOT_APP_ID }}"
+          private-key: "${{ secrets.BOT_APP_PRIVATE_KEY }}"
 
       - name: Checkout
         uses: actions/checkout@v4
@@ -66,8 +62,7 @@ jobs:
   compare-images:
     name: Compare Images
     runs-on: ubuntu-latest
-    needs:
-      - extract-images
+    needs: ["extract-images"]
     outputs:
       images: ${{ steps.compare-images.outputs.images }}
     steps:
@@ -82,11 +77,10 @@ jobs:
           echo "images=${images}" >> $GITHUB_OUTPUT
 
   pre-pull-images:
-    if: ${{ needs.extract-images.outputs.matrix != '[]' }}
-    name: Pre-pull images
-    runs-on: gha-runner-scale-set
-    needs:
-      - compare-images
+    if: ${{ needs.compare-images.outputs.images != '[]' }}
+    name: Pre-pull Images
+    runs-on: ["gha-runner-scale-set"]
+    needs: ["compare-images"]
     strategy:
       matrix:
         images: ${{ fromJSON(needs.compare-images.outputs.images) }}
@@ -102,14 +96,13 @@ jobs:
       - name: Pre-pull Image
         run: talosctl -n $NODE_IP image pull ${{ matrix.images }}
 
+  # Summarize matrix https://github.community/t/status-check-for-a-matrix-jobs/127354/7
   pre-pull-images-success:
     if: ${{ always() }}
-    needs:
-      - compare-images
-      - pre-pull-images
+    needs: ["pre-pull-images"]
     name: Pre-pull Images Successful
     runs-on: ubuntu-latest
     steps:
-      - if: ${{ needs.compare-images.outputs.images != '[]' && !contains(needs.*.result, 'success') }}
+      - if: ${{ contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled') }}
         name: Check matrix status
         run: exit 1
