Allow actions-runner-system api access

--- a/kubernetes/main/talos/talconfig.yaml
+++ b/kubernetes/main/talos/talconfig.yaml
@@ -318,3 +318,4 @@ controlPlane:
               - os:admin
             allowedKubernetesNamespaces:
               - system-upgrade
+              - actions-runner-system
