--- a/kubernetes/main/apps/default/recyclarr/app/config/recyclarr.yml
+++ b/kubernetes/main/apps/default/recyclarr/app/config/recyclarr.yml
@@ -42,13 +42,6 @@ radarr:
 
     include:
       - template: radarr-quality-definition-movie
-      - template: radarr-quality-definition-sqp-streaming
-      # 1080p
-      - template: radarr-custom-formats-sqp-1-1080p
-      - template: radarr-quality-profile-sqp-1-1080p
-      # 2160p
-      - template: radarr-custom-formats-sqp-1-2160p
-      - template: radarr-quality-profile-sqp-1-2160p-4k-only-imax-e
       # German 1080p
       - template: radarr-custom-formats-hd-bluray-web-german
       - template: radarr-quality-profile-hd-bluray-web-german
@@ -57,31 +50,21 @@ radarr:
       - template: radarr-quality-profile-uhd-bluray-web-german
 
     quality_profiles:
-      - name: SQP-1 (1080p)
-        min_format_score: 10
-        qualities:
-          - name: Bluray|WEB-1080p
-            qualities:
-              - Bluray-1080p
-              - WEBDL-1080p
-              - WEBRip-1080p
-      - name: SQP-1 (2160p)
-        min_format_score: 2000
       - name: HD Bluray + WEB (GER)
       - name: UHD Bluray + WEB (GER)
 
     custom_formats:
+      ### Optional
       - trash_ids:
-          - 7a0d1ad358fee9f5b074af3ef3f9d9ef # hallowed
-          - b6832f586342ef70d9c128d40c07b872 # Bad Dual Groups
-          - 90cedc1fea7ea5d11298bebd3d1d3223 # EVO (no WEBDL)
-          - ae9b7c9ebde1f3bd336a8cbd1ec4c5e5 # No-RlsGroup
-          - 7357cf5161efbf8c4d5d0c30b4815ee2 # Obfuscated
-          - 5c44f52a8714fdd79bb4d98e2673be1f # Retags
-          - f537cf427b64c38c8e36298f657e4828 # Scene
+         - b6832f586342ef70d9c128d40c07b872 # Bad Dual Groups
+         - 90cedc1fea7ea5d11298bebd3d1d3223 # EVO (no WEBDL)
+         - ae9b7c9ebde1f3bd336a8cbd1ec4c5e5 # No-RlsGroup
+         - 7357cf5161efbf8c4d5d0c30b4815ee2 # Obfuscated
+         - 5c44f52a8714fdd79bb4d98e2673be1f # Retags
+        #  - f537cf427b64c38c8e36298f657e4828 # Scene
         assign_scores_to:
-          - name: SQP-1 (1080p)
-          - name: SQP-1 (2160p)
+          - name: HD Bluray + WEB (GER)
+          - name: UHD Bluray + WEB (GER)
 
       ### Movie Versions
       - trash_ids:
