Rename folder configs to config

--- a/kubernetes/main/apps/default/plex/kometa/kustomization.yaml
+++ b/kubernetes/main/apps/default/plex/kometa/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
 configMapGenerator:
   - name: kometa-configmap
     files:
-      - ./configs/config.yml
+      - ./config/config.yml
 generatorOptions:
   disableNameSuffixHash: true
   annotations:
