--- a/kubernetes/main/apps/default/plex/kometa/kustomization.yaml
+++ b/kubernetes/main/apps/default/plex/kometa/kustomization.yaml
@@ -9,6 +9,10 @@ configMapGenerator:
   - name: kometa-configmap
     files:
       - ./config/config.yml
+      - ./config/overlay_languages_movies.yml
+      - ./config/overlay_languages_shows.yml
+      - ./config/overlays/flags/de.png
+      - ./config/overlays/flags/en.png
 generatorOptions:
   disableNameSuffixHash: true
   annotations:
