--- a/kubernetes/main/apps/default/plex/kometa/kustomization.yaml
+++ b/kubernetes/main/apps/default/plex/kometa/kustomization.yaml
@@ -8,11 +8,11 @@ resources:
 configMapGenerator:
   - name: kometa-configmap
     files:
-      - ./config/config.yml
-      - ./config/overlay_languages_movies.yml
-      - ./config/overlay_languages_shows.yml
-      - ./config/overlays/flags/de.png
-      - ./config/overlays/flags/en.png
+      - config.yml=./config/config.yml
+      - overlay_languages_movies.yml=./config/overlay_languages_movies.yml
+      - overlay_languages_shows.yml=./config/overlay_languages_shows.yml
+      - de.png=./config/overlays/flags/de.png
+      - en.png=./config/overlays/flags/en.png
 generatorOptions:
   disableNameSuffixHash: true
   annotations:
