--- a/kubernetes/main/apps/default/plex/kometa/config/overlay_languages_movies.yml
+++ b/kubernetes/main/apps/default/plex/kometa/config/overlay_languages_movies.yml
@@ -22,7 +22,7 @@ templates:
       level
     overlay:
       name: <<lang>>
-      file: config/flags/<<lang>>.png
+      file: config/<<lang>>.png
       text: " "
       back_width: 35
       back_height: 115
