--- a/kubernetes/main/apps/default/plex/kometa/kustomization.yaml
+++ b/kubernetes/main/apps/default/plex/kometa/kustomization.yaml
@@ -13,8 +13,8 @@ configMapGenerator:
     files:
       - ./config/overlay_languages_movies.yml
       - ./config/overlay_languages_shows.yml
-      - ./config/flags/de.png
-      - ./config/flags/en.png
+      - ./config/de.png
+      - ./config/en.png
 generatorOptions:
   disableNameSuffixHash: true
   annotations:
