feat!: follow the meta and prepare for flux operator takeover part 1

--- a/kubernetes/main/apps/default/govee2mqtt/ks.yaml
+++ b/kubernetes/main/apps/default/govee2mqtt/ks.yaml
@@ -14,7 +14,7 @@ spec:
     labels:
       app.kubernetes.io/name: *appname
   path: ./kubernetes/main/apps/default/govee2mqtt/app
-  prune: true
+  prune: false # revert to true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
