--- a/kubernetes/main/apps/databases/cloudnative-pg/ks.yaml
+++ b/kubernetes/main/apps/databases/cloudnative-pg/ks.yaml
@@ -9,7 +9,7 @@ spec:
   dependsOn:
     - name: external-secrets-stores
   path: ./kubernetes/main/apps/databases/cloudnative-pg/app
-  prune: true
+  prune: false # revert to true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
@@ -32,7 +32,7 @@ spec:
   dependsOn:
     - name: cloudnative-pg
   path: ./kubernetes/main/apps/databases/cloudnative-pg/cluster
-  prune: true
+  prune: false # revert to true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
