--- a/kubernetes/main/apps/default/immich/ks.yaml
+++ b/kubernetes/main/apps/default/immich/ks.yaml
@@ -11,7 +11,7 @@ spec:
     - name: dragonfly-cluster
     - name: external-secrets-stores
   path: ./kubernetes/main/apps/default/immich/app
-  prune: true
+  prune: false # revert to true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
