--- a/kubernetes/main/apps/default/prowlarr/ks.yaml
+++ b/kubernetes/main/apps/default/prowlarr/ks.yaml
@@ -10,7 +10,7 @@ spec:
     - name: cloudnative-pg-cluster
     - name: external-secrets-stores
   path: ./kubernetes/main/apps/default/prowlarr/app
-  prune: true
+  prune: false # revert to true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
