--- a/kubernetes/main/apps/default/sonarr/ks.yaml
+++ b/kubernetes/main/apps/default/sonarr/ks.yaml
@@ -16,7 +16,7 @@ spec:
     - name: volsync
     - name: rook-ceph-cluster
   path: ./kubernetes/main/apps/default/sonarr/app
-  prune: true
+  prune: false # revert to true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
