--- a/kubernetes/main/apps/default/vaultwarden/ks.yaml
+++ b/kubernetes/main/apps/default/vaultwarden/ks.yaml
@@ -15,7 +15,7 @@ spec:
     - name: cloudnative-pg-cluster
     - name: external-secrets-stores
   path: ./kubernetes/main/apps/default/vaultwarden/app
-  prune: true
+  prune: false # revert to true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
