--- a/kubernetes/main/apps/flux-system/addons/ks.yaml
+++ b/kubernetes/main/apps/flux-system/addons/ks.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   targetNamespace: default
   path: ./kubernetes/main/apps/flux-system/addons/monitoring
-  prune: true
+  prune: false # revert to true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
@@ -26,7 +26,7 @@ spec:
   dependsOn:
     - name: nginx-external
   path: ./kubernetes/main/apps/flux-system/addons/webhooks
-  prune: true
+  prune: false # revert to true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
