--- a/kubernetes/main/apps/kube-system/intel-device-plugin/ks.yaml
+++ b/kubernetes/main/apps/kube-system/intel-device-plugin/ks.yaml
@@ -10,7 +10,7 @@ spec:
     - name: node-feature-discovery
     - name: cert-manager-issuers
   path: ./kubernetes/main/apps/kube-system/intel-device-plugin/app
-  prune: true
+  prune: false # revert to true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
@@ -28,7 +28,7 @@ spec:
   dependsOn:
     - name: intel-device-plugin-operator
   path: ./kubernetes/main/apps/kube-system/intel-device-plugin/gpu
-  prune: true
+  prune: false # revert to true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
