--- a/kubernetes/main/apps/kube-system/node-feature-discovery/ks.yaml
+++ b/kubernetes/main/apps/kube-system/node-feature-discovery/ks.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   targetNamespace: kube-system
   path: ./kubernetes/main/apps/kube-system/node-feature-discovery/app
-  prune: true
+  prune: false # revert to true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
@@ -24,7 +24,7 @@ spec:
   dependsOn:
     - name: node-feature-discovery
   path: ./kubernetes/main/apps/kube-system/node-feature-discovery/rules
-  prune: true
+  prune: false # revert to true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
