--- a/kubernetes/main/apps/kube-system/spegel/ks.yaml
+++ b/kubernetes/main/apps/kube-system/spegel/ks.yaml
@@ -9,7 +9,7 @@ spec:
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
-  prune: true
+  prune: false # revert to true
   wait: false
   interval: 30m
   retryInterval: 1m
