--- a/kubernetes/main/apps/networking/cloudflared/ks.yaml
+++ b/kubernetes/main/apps/networking/cloudflared/ks.yaml
@@ -16,7 +16,7 @@ spec:
   interval: 30m
   timeout: 5m
   path: "./kubernetes/main/apps/networking/cloudflared/app"
-  prune: true
+  prune: false # revert to true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
