--- a/kubernetes/main/apps/networking/external-services/ks.yaml
+++ b/kubernetes/main/apps/networking/external-services/ks.yaml
@@ -9,7 +9,7 @@ spec:
   dependsOn:
     - name: nginx-external
   path: ./kubernetes/main/apps/networking/external-services/minio
-  prune: true
+  prune: false # revert to true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
