--- a/kubernetes/main/flux/apps.yaml
+++ b/kubernetes/main/flux/apps.yaml
@@ -8,7 +8,7 @@ spec:
   timeout: 5m0s
   interval: 10m0s
   path: ./kubernetes/main/apps
-  prune: true
+  prune: false # revert to true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
