--- a/kubernetes/main/bootstrap/apps/helmfile.yaml
+++ b/kubernetes/main/bootstrap/apps/helmfile.yaml
@@ -18,40 +18,64 @@ repositories:
   - name: coredns
     url: https://coredns.github.io/helm
 
-  - name: postfinance
-    url: https://postfinance.github.io/kubelet-csr-approver
-
 releases:
   - name: prometheus-operator-crds
     namespace: monitoring
     chart: oci://ghcr.io/prometheus-community/charts/prometheus-operator-crds
     version: 17.0.2
 
-  - name: &name cilium
-    namespace: &namespace kube-system
+  - name: cilium
+    namespace: kube-system
     chart: cilium/cilium
     version: 1.16.5
     values:
       - ../../apps/kube-system/cilium/app/helm-values.yaml
-      - commonLabels:
-          helm.toolkit.fluxcd.io/name: *name
-          helm.toolkit.fluxcd.io/namespace: *namespace
-    needs: ["monitoring/prometheus-operator-crds"]
+    needs:
+      - monitoring/prometheus-operator-crds
 
-  - name: &name coredns
-    namespace: &namespace kube-system
+  - name: coredns
+    namespace: kube-system
     chart: coredns/coredns
     version: 1.37.0
     values:
       - ../../apps/kube-system/coredns/app/helm-values.yaml
-      - customLabels:
-          helm.toolkit.fluxcd.io/name: *name
-          helm.toolkit.fluxcd.io/namespace: *namespace
-    needs: ["kube-system/cilium"]
+    needs:
+      - kube-system/cilium
 
   - name: spegel
     namespace: kube-system
     chart: oci://ghcr.io/spegel-org/helm-charts/spegel
     version: v0.0.29
-    values: ["../../apps/kube-system/spegel/app/helm-values.yaml"]
-    needs: ["kube-system/coredns"]
+    values:
+      - ../../apps/kube-system/spegel/app/helm-values.yaml
+    needs:
+      - kube-system/coredns
+
+
+  - name: wipe-rook
+    namespace: kube-system
+    chart: oci://ghcr.io/bjw-s/helm/app-template
+    version: 3.6.0
+    values:
+      - ./templates/wipe-rook.yaml.gotmpl
+    needs:
+      - kube-system/spegel
+
+  - name: flux-operator
+    namespace: flux-system
+    chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-operator
+    version: 0.13.0
+    values:
+      - ../../apps/flux-system/flux-operator/app/helm-values.yaml
+    needs:
+      - kube-system/wipe-rook
+
+  - name: flux-instance
+    namespace: flux-system
+    chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-instance
+    version: 0.13.0
+    wait: false
+    values:
+      - ../../apps/flux-system/flux-operator/instance/helm-values.yaml
+    needs:
+      - flux-system/flux-operator
