--- a/kubernetes/main/apps/cert-manager/cert-manager/ks.yaml
+++ b/kubernetes/main/apps/cert-manager/cert-manager/ks.yaml
@@ -13,7 +13,7 @@ spec:
   prune: false # revert to true
   sourceRef:
     kind: GitRepository
-    name: home-kubernetes
+    name: flux-system
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta2
       kind: HelmRelease
@@ -40,7 +40,7 @@ spec:
   prune: false # revert to true
   sourceRef:
     kind: GitRepository
-    name: home-kubernetes
+    name: flux-system
   interval: 30m
   retryInterval: 1m
   timeout: 3m
