--- a/kubernetes/main/apps/databases/cloudnative-pg/ks.yaml
+++ b/kubernetes/main/apps/databases/cloudnative-pg/ks.yaml
@@ -12,7 +12,7 @@ spec:
   prune: false # revert to true
   sourceRef:
     kind: GitRepository
-    name: home-kubernetes
+    name: flux-system
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta2
       kind: HelmRelease
@@ -35,7 +35,7 @@ spec:
   prune: false # revert to true
   sourceRef:
     kind: GitRepository
-    name: home-kubernetes
+    name: flux-system
   wait: true
   interval: 30m
   retryInterval: 1m
