--- a/kubernetes/main/apps/databases/influxdb/ks.yaml
+++ b/kubernetes/main/apps/databases/influxdb/ks.yaml
@@ -17,7 +17,7 @@ spec:
   prune: false # revert to true
   sourceRef:
     kind: GitRepository
-    name: home-kubernetes
+    name: flux-system
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta2
       kind: HelmRelease
