--- a/kubernetes/main/apps/default/searxng/ks.yaml
+++ b/kubernetes/main/apps/default/searxng/ks.yaml
@@ -16,7 +16,7 @@ spec:
   prune: false # revert to true
   sourceRef:
     kind: GitRepository
-    name: home-kubernetes
+    name: flux-system
   wait: false
   dependsOn:
     - name: external-secrets-stores
