--- a/kubernetes/main/apps/default/vaultwarden/ks.yaml
+++ b/kubernetes/main/apps/default/vaultwarden/ks.yaml
@@ -18,7 +18,7 @@ spec:
   prune: false # revert to true
   sourceRef:
     kind: GitRepository
-    name: home-kubernetes
+    name: flux-system
   interval: 30m
   retryInterval: 1m
   timeout: 3m
