--- a/kubernetes/main/apps/kube-system/intel-device-plugin/ks.yaml
+++ b/kubernetes/main/apps/kube-system/intel-device-plugin/ks.yaml
@@ -13,7 +13,7 @@ spec:
   prune: false # revert to true
   sourceRef:
     kind: GitRepository
-    name: home-kubernetes
+    name: flux-system
   interval: 30m
   retryInterval: 1m
   timeout: 3m
@@ -31,7 +31,7 @@ spec:
   prune: false # revert to true
   sourceRef:
     kind: GitRepository
-    name: home-kubernetes
+    name: flux-system
   interval: 30m
   retryInterval: 1m
   timeout: 3m
