--- a/kubernetes/main/apps/kube-system/node-feature-discovery/ks.yaml
+++ b/kubernetes/main/apps/kube-system/node-feature-discovery/ks.yaml
@@ -9,7 +9,7 @@ spec:
   prune: false # revert to true
   sourceRef:
     kind: GitRepository
-    name: home-kubernetes
+    name: flux-system
   interval: 15m
   retryInterval: 1m
   timeout: 3m
@@ -27,7 +27,7 @@ spec:
   prune: false # revert to true
   sourceRef:
     kind: GitRepository
-    name: home-kubernetes
+    name: flux-system
   wait: true
   interval: 15m
   retryInterval: 1m
