--- a/kubernetes/main/apps/kube-system/reloader/ks.yaml
+++ b/kubernetes/main/apps/kube-system/reloader/ks.yaml
@@ -8,7 +8,7 @@ spec:
   path: ./kubernetes/main/apps/kube-system/reloader/app
   sourceRef:
     kind: GitRepository
-    name: home-kubernetes
+    name: flux-system
   interval: 30m
   prune: false
   wait: true
