--- a/kubernetes/main/apps/monitoring/kube-state-metrics/ks.yaml
+++ b/kubernetes/main/apps/monitoring/kube-state-metrics/ks.yaml
@@ -16,5 +16,5 @@ spec:
   prune: false # revert to true
   sourceRef:
     kind: GitRepository
-    name: home-kubernetes
+    name: flux-system
   wait: false
