--- a/kubernetes/main/apps/networking/cloudflared/ks.yaml
+++ b/kubernetes/main/apps/networking/cloudflared/ks.yaml
@@ -19,5 +19,5 @@ spec:
   prune: false # revert to true
   sourceRef:
     kind: GitRepository
-    name: home-kubernetes
+    name: flux-system
   wait: false
