--- a/kubernetes/main/flux/apps.yaml
+++ b/kubernetes/main/flux/apps.yaml
@@ -11,7 +11,7 @@ spec:
   prune: false # revert to true
   sourceRef:
     kind: GitRepository
-    name: home-kubernetes
+    name: flux-system
   decryption:
     provider: sops
     secretRef:
