--- a/kubernetes/main/apps/databases/dragonfly/ks.yaml
+++ b/kubernetes/main/apps/databases/dragonfly/ks.yaml
@@ -12,7 +12,7 @@ spec:
       app.kubernetes.io/name: *appname
   interval: 10m
   path: ./kubernetes/main/apps/databases/dragonfly/operator
-  prune: false # revert to true
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -31,7 +31,7 @@ spec:
       app.kubernetes.io/name: *appname
   interval: 10m
   path: ./kubernetes/main/apps/databases/dragonfly/cluster
-  prune: false # revert to true
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
