--- a/kubernetes/main/apps/databases/influxdb/ks.yaml
+++ b/kubernetes/main/apps/databases/influxdb/ks.yaml
@@ -14,7 +14,7 @@ spec:
     - name: volsync
     - name: external-secrets-stores
   path: ./kubernetes/main/apps/databases/influxdb/app
-  prune: false # revert to true
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
