--- a/kubernetes/main/apps/databases/postgres-backup/ks.yaml
+++ b/kubernetes/main/apps/databases/postgres-backup/ks.yaml
@@ -9,7 +9,7 @@ spec:
   dependsOn:
     - name: cloudnative-pg-cluster
   path: ./kubernetes/main/apps/databases/postgres-backup/app
-  prune: false # revert to true
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
