--- a/kubernetes/main/apps/default/audiobookshelf/ks.yaml
+++ b/kubernetes/main/apps/default/audiobookshelf/ks.yaml
@@ -13,7 +13,7 @@ spec:
     - name: rook-ceph-cluster
     - name: volsync
   path: ./kubernetes/main/apps/default/audiobookshelf/app
-  prune: false # revert to true
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
