--- a/kubernetes/main/apps/default/authelia/ks.yaml
+++ b/kubernetes/main/apps/default/authelia/ks.yaml
@@ -11,7 +11,7 @@ spec:
     - name: dragonfly-cluster
     - name: lldap
   path: ./kubernetes/main/apps/default/authelia/app
-  prune: false # revert to true
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
