--- a/kubernetes/main/apps/default/sabnzbd/ks.yaml
+++ b/kubernetes/main/apps/default/sabnzbd/ks.yaml
@@ -14,7 +14,7 @@ spec:
     - name: volsync
     - name: rook-ceph-cluster
   path: ./kubernetes/main/apps/default/sabnzbd/app
-  prune: false # revert to true
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
