--- a/kubernetes/main/apps/default/smtp-relay/ks.yaml
+++ b/kubernetes/main/apps/default/smtp-relay/ks.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   targetNamespace: default
   path: ./kubernetes/main/apps/default/smtp-relay/app
-  prune: false # revert to true
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
