--- a/kubernetes/main/apps/default/tandoor/ks.yaml
+++ b/kubernetes/main/apps/default/tandoor/ks.yaml
@@ -15,7 +15,7 @@ spec:
     - name: rook-ceph-cluster
     - name: external-secrets-stores
   path: ./kubernetes/main/apps/default/tandoor/app
-  prune: false # revert to true
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
