--- a/kubernetes/main/apps/kube-system/metrics-server/ks.yaml
+++ b/kubernetes/main/apps/kube-system/metrics-server/ks.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   targetNamespace: kube-system
   path: ./kubernetes/main/apps/kube-system/metrics-server/app
-  prune: false # revert to true
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
