--- a/kubernetes/main/apps/networking/cloudflare-ddns/ks.yaml
+++ b/kubernetes/main/apps/networking/cloudflare-ddns/ks.yaml
@@ -9,7 +9,7 @@ spec:
   dependsOn:
     - name: external-secrets-stores
   path: ./kubernetes/main/apps/networking/cloudflare-ddns/app
-  prune: false # revert to true
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
