--- a/kubernetes/main/apps/networking/multus/ks.yaml
+++ b/kubernetes/main/apps/networking/multus/ks.yaml
@@ -15,7 +15,7 @@ spec:
   interval: 30m
   timeout: 5m
   path: "./kubernetes/main/apps/networking/multus/app"
-  prune: false # revert to true
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -37,7 +37,7 @@ spec:
   interval: 30m
   timeout: 5m
   path: "./kubernetes/main/apps/networking/multus/networks"
-  prune: false # revert to true
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
