--- a/kubernetes/main/apps/networking/nginx/ks.yaml
+++ b/kubernetes/main/apps/networking/nginx/ks.yaml
@@ -14,7 +14,7 @@ spec:
     kind: GitRepository
     name: flux-system
   interval: 30m
-  prune: false # revert to true
+  prune: true
   wait: true
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/kustomization-kustomize-v1.json
@@ -28,7 +28,7 @@ spec:
   dependsOn:
     - name: nginx-certificates
   path: ./kubernetes/main/apps/networking/nginx/internal
-  prune: false # revert to true
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -47,7 +47,7 @@ spec:
   dependsOn:
     - name: nginx-certificates
   path: ./kubernetes/main/apps/networking/nginx/external
-  prune: false # revert to true
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
