Remove rook task

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -17,7 +17,7 @@ includes:
   flux: .taskfiles/Flux/Taskfile.yaml
   sops: .taskfiles/Sops/Taskfile.yaml
   talos: .taskfiles/Talos/Taskfile.yaml
-  rook: .taskfiles/Rook/Taskfile.yaml
+  # rook: .taskfiles/Rook/Taskfile.yaml
   volsync: .taskfiles/Volsync/Taskfile.yaml
 
 tasks:
